Update installer to use exports/opens JVM args